Fix aligning of section projects;

--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -139,7 +139,6 @@
   padding-bottom: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .projects--heading {
   display: flex;
